--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -9,65 +9,74 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-GRHJzDWS.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-NkHVuF57.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-y8HhN-PJ.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-pjmP8aBN.css">
 </head>
 
 <body>
   <header class="header" id="header">
-    <nav class="nav container">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a href="index.html">
-            <img class="logo" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/logo-l72Uixlr.png" alt="logo">
-          </a>
-        </li>
+    <div class="container">
 
-        <li>
-          <ul>
-            <li class="nav__item">
-              <a class="nav__link" href="#favorites">Favorite coffee</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#about">About</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#mobile-app">Mobile app</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#footer">Contact us</a>
-            </li>
-          </ul>
-        </li>
+      <a href="index.html">
+        <img class="logo" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/logo-l72Uixlr.png" alt="logo">
+      </a>
 
-        <li class="nav__item">
-          <a class="nav__link" href="menu.html">
-            <span>Menu</span>
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#coffee-cup"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#favorites">Favorite coffee</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about">About</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#mobile-app">Mobile app</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#footer">Contact us</a>
+          </li>
+
+          <li class="nav__item nav__item--menu">
+            <a class="menu-link" href="menu.html">
+              <span>Menu</span>
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#coffee-cup"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <a class="menu-link nav__link" href="menu.html">
+        <span>Menu</span>
+        <svg>
+          <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#coffee-cup"></use>
+        </svg>
+      </a>
+
+      <button class="btn-nav"></button>
+    </div>
   </header>
 
   <main class="main">
     <section class="hero-section" id="hero">
-      <div class="hero container">
-        <div class="hero__info">
-          <h1 class="hero__title heading-1"><span class="text-accent">Enjoy</span> premium coffee at our charming cafe
-          </h1>
-          <p class="hero__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is
-            a
-            popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
-            beverage.</p>
-          <a href="menu.html" class="btn-primary">
-            <span>Menu</span>
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#coffee-cup"></use>
-            </svg>
-          </a>
+      <div class="container">
+        <div class="hero">
+          <div class="hero__info">
+            <h1 class="hero__title heading-1"><span class="text-accent">Enjoy</span> premium coffee at our charming cafe
+            </h1>
+            <p class="hero__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource
+              is
+              a
+              popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
+              beverage.</p>
+            <a href="menu.html" class="btn-primary">
+              <span>Menu</span>
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#coffee-cup"></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -78,7 +87,7 @@
         <div class="carousel">
           <button class="btn-icon carousel__btn carousel__btn--prev">
             <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#arrow-left"></use>
+              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#arrow-left"></use>
             </svg>
           </button>
           <div class="carousel__slide">
@@ -95,7 +104,7 @@
           </div>
           <button class="btn-icon carousel__btn carousel__btn--next">
             <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#arrow-right"></use>
+              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#arrow-right"></use>
             </svg>
           </button>
         </div>
@@ -132,23 +141,23 @@
       <div class="mobile-app container">
         <div class="mobile-app__info">
           <h2 class="heading-2"><span class="text-accent">Download</span> our apps to start ordering</h2>
-          <p>Download the Resource app today and experience the comfort of ordering your favorite coffee frhom wherever
+          <p>Download the Resource app today and experience the comfort of ordering your favorite coffee from wherever
             you
             are</p>
           <div class="mobile-app__links">
             <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#apple"></use>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#apple"></use>
               </svg>
               <span class="btn-appstore__caption text-caption">Available on the</span>
               <span class="btn-appstore__title">App store</span>
             </a>
             <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#google"></use>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#google"></use>
               </svg>
               <span class="btn-appstore__caption text-caption">Available on</span>
-              <span class="btn-appstore__title">Google play</span>
+              <span class="btn-appstore__title">Google Play</span>
             </a>
           </div>
         </div>
@@ -160,60 +169,62 @@
   </main>
 
   <footer class="footer-section" id="footer">
-    <div class="footer container">
-
-      <div class="footer__offer">
-        <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
-            It’s coffee time!</span></h2>
-        <div class="footer__socials">
-          <a class="btn-icon btn-icon--light" href="https://twitter.com/">
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#twitter"></use>
-            </svg>
-          </a>
-          <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#instagram"></use>
-            </svg>
-          </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#facebook"></use>
-            </svg>
-          </a>
+    <div class="container">
+      <div class="footer">
+        <div class="footer__offer">
+          <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
+              It’s coffee time!</span></h2>
+          <div class="footer__socials">
+            <a class="btn-icon btn-icon--light" href="https://twitter.com/">
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#twitter"></use>
+              </svg>
+            </a>
+            <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#instagram"></use>
+              </svg>
+            </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
         </div>
+
+        <nav class="footer__contacts-info">
+          <h3 class="heading-3 text-light">Contact us</h3>
+
+          <ul>
+            <li>
+              <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA"
+                target="_blank">
+                <svg>
+                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#pin-alt"></use>
+                </svg>
+                <span>8558 Green Rd., LA</span>
+              </a>
+            </li>
+            <li>
+              <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
+                <svg>
+                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#phone"></use>
+                </svg>
+                <span>+1 (603) 555-0123</span>
+              </a>
+            </li>
+            <li>
+              <p class="footer__contact-link text-link footer__contact-link--schedule">
+                <svg>
+                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#clock"></use>
+                </svg>
+                <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
+              </p>
+            </li>
+          </ul>
+
+        </nav>
       </div>
-
-      <nav class="footer__contacts-info">
-        <h3 class="heading-3 text-light">Contact us</h3>
-
-        <ul>
-          <li>
-            <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA" target="_blank">
-              <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#pin-alt"></use>
-              </svg>
-              <span>8558 Green Rd., LA</span>
-            </a>
-          </li>
-          <li>
-            <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
-              <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#phone"></use>
-              </svg>
-              <span>+1 (603) 555-0123</span>
-            </a>
-          </li>
-          <li>
-            <p class="footer__contact-link text-link footer__contact-link--schedule">
-              <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#clock"></use>
-              </svg>
-              <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
-            </p>
-          </li>
-        </ul>
-
-      </nav>
     </div>
   </footer>
 
