--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -9,47 +9,53 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house | Menu</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-GRHJzDWS.js"></script>
-  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-NkHVuF57.css">
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-y8HhN-PJ.js"></script>
+  <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/main-pjmP8aBN.css">
 </head>
 
 <body>
   <header class="header" id="header">
-    <nav class="nav container">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a href="index.html">
-            <img class="logo" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/logo-l72Uixlr.png" alt="logo">
-          </a>
-        </li>
+    <div class="container">
 
-        <li>
-          <ul>
-            <li class="nav__item">
-              <a class="nav__link" href="index.html#favorites">Favorite coffee</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="index.html#about">About</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="index.html#mobile-app">Mobile app</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#footer">Contact us</a>
-            </li>
-          </ul>
-        </li>
+      <a href="index.html">
+        <img class="logo" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/logo-l72Uixlr.png" alt="logo">
+      </a>
 
-        <li class="nav__item">
-          <a class="nav__link nav__link--active" href="#!">
-            <span>Menu</span>
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#coffee-cup"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="index.html#favorites">Favorite coffee</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="index.html#about">About</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="index.html#mobile-app">Mobile app</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#footer">Contact us</a>
+          </li>
+
+          <li class="nav__item nav__item--menu">
+            <a class="menu-link menu-link--active" href="menu.html">
+              <span>Menu</span>
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#coffee-cup"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <a class="menu-link nav__link menu-link--active" href="menu.html">
+        <span>Menu</span>
+        <svg>
+          <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#coffee-cup"></use>
+        </svg>
+      </a>
+
+      <button class="btn-nav"></button>
+    </div>
   </header>
 
   <main class="main">
@@ -129,6 +135,7 @@
               <p class="card__price heading-3">$4.50</p>
             </div>
           </article>
+
           <article class="card">
             <div class="card__img-box">
               <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-6-29yfKNVj.jpeg" alt="Latte">
@@ -139,6 +146,7 @@
               <p class="card__price heading-3">$5.50</p>
             </div>
           </article>
+
           <article class="card">
             <div class="card__img-box">
               <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-7-bXQOhubq.jpeg" alt="Latte macchiato">
@@ -149,6 +157,7 @@
               <p class="card__price heading-3">$5.50</p>
             </div>
           </article>
+
           <article class="card">
             <div class="card__img-box">
               <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/coffee-8-gasqJPW6.jpeg" alt="Coffee with cognac">
@@ -160,66 +169,74 @@
             </div>
           </article>
         </div>
+
+        <button class="btn-icon">
+          <svg>
+            <use href=" src/imgs/sprite.svg#refresh"></use>
+          </svg>
+        </button>
       </div>
     </section>
 
   </main>
 
   <footer class="footer-section" id="footer">
-    <div class="footer container">
-
-      <div class="footer__offer">
-        <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
-            It’s coffee time!</span></h2>
-        <div class="footer__socials">
-          <a class="btn-icon btn-icon--light" href="https://twitter.com/">
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#twitter"></use>
-            </svg>
-          </a>
-          <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#instagram"></use>
-            </svg>
-          </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
-            <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#facebook"></use>
-            </svg>
-          </a>
+    <div class="container">
+      <div class="footer">
+        <div class="footer__offer">
+          <h2 class="footer__title heading-2">Sip, Savor, Smile. <span class="text-accent">
+              It’s coffee time!</span></h2>
+          <div class="footer__socials">
+            <a class="btn-icon btn-icon--light" href="https://twitter.com/">
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#twitter"></use>
+              </svg>
+            </a>
+            <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#instagram"></use>
+              </svg>
+            </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
+              <svg>
+                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#facebook"></use>
+              </svg>
+            </a>
+          </div>
         </div>
+
+        <nav class="footer__contacts-info">
+          <h3 class="heading-3 text-light">Contact us</h3>
+
+          <ul>
+            <li>
+              <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA"
+                target="_blank">
+                <svg>
+                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#pin-alt"></use>
+                </svg>
+                <span>8558 Green Rd., LA</span>
+              </a>
+            </li>
+            <li>
+              <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
+                <svg>
+                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#phone"></use>
+                </svg>
+                <span>+1 (603) 555-0123</span>
+              </a>
+            </li>
+            <li>
+              <p class="footer__contact-link text-link footer__contact-link--schedule">
+                <svg>
+                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-OqTbI25v.svg#clock"></use>
+                </svg>
+                <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
+              </p>
+            </li>
+          </ul>
+
+        </nav>
       </div>
-
-      <nav class="footer__contacts-info">
-        <h3 class="heading-3 text-light">Contact us</h3>
-
-        <ul>
-          <li>
-            <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA" target="_blank">
-              <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#pin-alt"></use>
-              </svg>
-              <span>8558 Green Rd., LA</span>
-            </a>
-          </li>
-          <li>
-            <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
-              <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#phone"></use>
-              </svg>
-              <span>+1 (603) 555-0123</span>
-            </a>
-          </li>
-          <li>
-            <p class="footer__contact-link text-link footer__contact-link--schedule">
-              <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/sprite-eIPipqk6.svg#clock"></use>
-              </svg>
-              <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
-            </p>
-          </li>
-        </ul>
-
-      </nav>
     </div>
   </footer>
 
