--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -92,7 +92,7 @@
           </button>
           <div class="carousel__slide">
             <div class="item">
-              <img src="src/imgs/coffee-slider-1.png" alt="S'mores Frappuccino">
+              <img src="src/imgs/coffee-slider-1.webp" alt="S'mores Frappuccino">
               <div class="item__info">
                 <h3 class="heading-3">S'mores Frappuccino</h3>
                 <p>This new drink takes an espresso and mixes it with brown sugar
@@ -125,13 +125,13 @@
           friends, or get some work done.</h2>
 
         <div class="gallery">
-          <figure class="gallery__item gallery__item--1"><img src="src/imgs/about-1.jpeg"
+          <figure class="gallery__item gallery__item--1"><img src="src/imgs/about-1.webp"
               alt="a woman drinking coffee in a cafe"></figure>
-          <figure class="gallery__item gallery__item--2"><img src="src/imgs/about-2.jpeg"
+          <figure class="gallery__item gallery__item--2"><img src="src/imgs/about-2.webp"
               alt="a man working on a laptop with coffee"></figure>
-          <figure class="gallery__item gallery__item--3"><img src="src/imgs/about-3.jpeg" alt="a cup of coffee">
+          <figure class="gallery__item gallery__item--3"><img src="src/imgs/about-3.webp" alt="a cup of coffee">
           </figure>
-          <figure class="gallery__item gallery__item--4"><img src="src/imgs/about-4.jpeg"
+          <figure class="gallery__item gallery__item--4"><img src="src/imgs/about-4.webp"
               alt="a couple drinking coffee"></figure>
         </div>
       </div>
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="mobile-app__img-box">
-          <img src="src/imgs/mobile-screens.png" alt="mobile app" class="mobile-app__img">
+          <img src="src/imgs/mobile-screens.webp" alt="mobile app" class="mobile-app__img">
         </div>
       </div>
     </section>
