--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -83,7 +83,7 @@
         <div class="menu__items">
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-1.jpeg" alt="Irish coffee">
+              <img src="src/imgs/coffee-1.webp" alt="Irish coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Irish coffee</h3>
@@ -94,7 +94,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-2.jpeg" alt="Kahlua coffee">
+              <img src="src/imgs/coffee-2.webp" alt="Kahlua coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Kahlua coffee</h3>
@@ -105,7 +105,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-3.jpeg" alt="Honey raf">
+              <img src="src/imgs/coffee-3.webp" alt="Honey raf">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Honey raf</h3>
@@ -116,7 +116,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-4.jpeg" alt="Ice cappuccino">
+              <img src="src/imgs/coffee-4.webp" alt="Ice cappuccino">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Ice cappuccino</h3>
@@ -127,7 +127,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-5.jpeg" alt="Espresso">
+              <img src="src/imgs/coffee-5.webp" alt="Espresso">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Espresso</h3>
@@ -138,7 +138,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-6.jpeg" alt="Latte">
+              <img src="src/imgs/coffee-6.webp" alt="Latte">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte</h3>
@@ -149,7 +149,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-7.jpeg" alt="Latte macchiato">
+              <img src="src/imgs/coffee-7.webp" alt="Latte macchiato">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte macchiato</h3>
@@ -160,7 +160,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="src/imgs/coffee-8.jpeg" alt="Coffee with cognac">
+              <img src="src/imgs/coffee-8.webp" alt="Coffee with cognac">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Coffee with cognac</h3>
